<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgListIcon"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:contentDescription="@string/list"
                app:srcCompat="@drawable/ic_baseline_list_alt_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tvCCreateList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/create_list"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgCCancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="0.15"
                android:contentDescription="@string/edit_Button"
                app:srcCompat="@drawable/ic_outline_cancel_24"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <EditText
            android:id="@+id/etTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"

            android:fontFamily="serif"
            android:freezesText="true"
            android:hint="@string/enter_title"
            android:inputType="textPersonName"
            android:scrollbars="horizontal"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etAddItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:autofillHints=""

            android:hint="@string/add_items"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <ImageView
            android:id="@+id/imgAddSubItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            app:srcCompat="@drawable/ic_add"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSubItems"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="5dp"

            android:background="@color/white">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="3dp"

                android:paddingBottom="3dp"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/High"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Medium"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Low"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvChooseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="01"
                android:padding="7dp"
                android:text="@string/choose_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvCdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:includeFontPadding="true"
                android:padding="7dp"
                android:text="@string/may_25_2021"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imgCicon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/calender_btn"
                app:srcCompat="@drawable/calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/tvChooseTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="01"
                android:padding="7dp"
                android:text="@string/choose_time"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvCTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:includeFontPadding="true"
                android:padding="7dp"
                android:text="@string/_7_13_pm"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imgCTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.2"
                android:contentDescription="@string/calender_btn"
                app:srcCompat="@drawable/clock" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/tvReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="01"
                android:padding="7dp"
                android:text="@string/repeat"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />


            <ImageView
                android:id="@+id/imgRepeat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/calender_btn"
                app:srcCompat="@drawable/repeat" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/bg_design"
            android:text="@string/save" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>