<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".MainScreenSingleItem">

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="3dp"

                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:hint="@string/title"
                    android:padding="3dp"

                    android:textColorHint="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.4"
                    android:contentDescription="@string/priority_tag"
                    android:src="@drawable/green" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"

                android:gravity="center_vertical"
                android:hint="@string/description"
                android:padding="4dp"
                android:textColorHint="@color/black" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/Time" />


</LinearLayout>



