<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvCCreateList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/baloo"
                android:text="@string/to_do"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgCCancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/edit_Button"
                app:srcCompat="@drawable/edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvMText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"

                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"

                android:layout_marginRight="6dp"

                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/add_some_task_for_your_ease"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvMDate"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="0.5"
                android:text="@string/Date_today"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imgMCalender"
                android:layout_width="0dp"
                android:layout_height="40dp"

                android:layout_marginEnd="5dp"

                android:layout_weight="0.16"
                android:contentDescription="@string/calender_btn"
                app:srcCompat="@drawable/calendar" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="90dp"
            android:visibility="visible"
            app:srcCompat="@drawable/empty_note" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMainItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fabAddTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/addBtn"
        android:scaleType="center"
        android:src="@drawable/ic_add"
        android:tint="@color/white"

        app:backgroundTint="@color/textColor"
        app:borderWidth="0dp"
        app:fabSize="normal" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>